Name:               matasano
Version:            0.1.0
Synopsis:           A Haskell implementation of the Matasano Crypto Challenges
Description:        A Haskell implementation of the Matasano Crypto Challenges
License:            BSD3
License-File:       LICENSE
Author:             Carlos Valiente
Maintainer:         Carlos Valiente <carlos@pepelabs.net>
Copyright:          Copyright (c) 2013, Carlos Valiente
Category:           Data
Stability:          Experimental
Build-Type:         Simple
Cabal-Version:      >= 1.8
Tested-With:        GHC==7.6.3
Extra-Source-Files: README.rst
Data-Files:         data/gist-3132713,
                    data/gist-3132752,
                    data/gist-3132853,
                    data/gist-3132928,
                    data/pg1661.txt

Source-Repository head
  Type:     git
  Location: git@code.pepelabs.net:carlos/matasano.git
  SubDir:   matasano

Library
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        base16-bytestring == 0.1.*,
                        base64-bytestring == 1.0.*,
                        containers == 0.5.*
  Exposed-Modules:      Matasano,
                        Matasano.Utils
  HS-Source-Dirs:	src
  ghc-options:		-Wall -O2

Executable problem-1-1
  Build-Depends:        base == 4.6.*,
                        matasano
  Main-Is:		problems/problem-1-1.hs
  ghc-options:		-Wall -O2

Executable problem-1-2
  Build-Depends:        base == 4.6.*,
                        matasano
  Main-Is:		problems/problem-1-2.hs
  ghc-options:		-Wall -O2

Executable problem-1-3
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        matasano
  Main-Is:		problems/problem-1-3.hs
  ghc-options:		-Wall -O2

Executable problem-1-4
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        matasano
  Main-Is:		problems/problem-1-4.hs
  ghc-options:		-Wall -O2

Executable problem-1-5
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        matasano
  Main-Is:		problems/problem-1-5.hs
  ghc-options:		-Wall -O2

Executable problem-1-6
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        matasano
  Main-Is:		problems/problem-1-6.hs
  ghc-options:		-Wall -O2

Executable problem-1-7
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        cipher-aes == 0.2.*,
                        crypto-api == 0.12.*,
                        matasano
  Main-Is:		problems/problem-1-7.hs
  ghc-options:		-Wall -O2

Executable problem-1-8
  Build-Depends:        base == 4.6.*,
                        bytestring == 0.10.*,
                        containers == 0.5.*,
                        matasano
  Main-Is:		problems/problem-1-8.hs
  ghc-options:		-Wall -O2